<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/sokrom_tittel"
        android:background="#69b0a7"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:weightSum="11"
            android:baselineAligned="false"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="5">

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reserver_dato"
                    android:id="@+id/bt_dato"
                    android:background="#69b0a7"
                    android:textColor="#ffffff"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/et_dato"
                    android:background="#f3f7f7"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3"
                >

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reserver_fra"
                    android:id="@+id/bt_tid_fra"
                    android:background="#69b0a7"
                    android:textColor="#ffffff"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/et_tid_fra"
                    android:background="#f3f7f7"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3"
                >

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reserver_til"
                    android:id="@+id/bt_tid_til"
                    android:background="#69b0a7"
                    android:textColor="#ffffff"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/et_tid_til"
                    android:background="#f3f7f7"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/sokrom_visledige"
            android:id="@+id/bt_vis_ledige"
            android:background="#69b0a7"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/sokrom_ledige_rom"
            android:textSize="20sp"
            android:background="#69b0a7"
            android:textColor="#ffffff"
            />

        <fragment
            android:id="@+id/rombookingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.julia.rombooking_v16.rombookingListFragment" />

    </LinearLayout>

</LinearLayout>